--- a/index.html
+++ b/index.html
@@ -231,7 +231,6 @@
 													2nd edition course lab manual,
 												<a target="_blank" rel="noopener noreferrer" href="https://he.kendallhunt.com/sites/default/files/product_images_original/9798765708002.jpg">
 													<i>Field & Laboratory Methods for Environmental Science for Non-majors</i></a>.</li>
-
 												<li>Held weekly office hours and promptly updated grades.</li>
 												<li>Prepared weekly PowerPoints and learning materials; organized the online course for all TAs to use.</li>
 											</ul>
@@ -273,37 +272,46 @@
 									</tr>
 									</thead>
 									<tr>
-									<tr>
-									<td><b>Graduate Thesis Research</b> (UNT) <br>
-										<i>Conservation, Connectivity, and Coexistence:
-											Understanding Corridor Efficacy in Fragmented Landscapes</i><br>
-										<ul>
-											<li>Used remotely sensed data to quantify and assess the composition of configuration of 3 landscapes.</li>
-											<li>Developed scripts for spatial/statistical analyses and uniform data visualization.</li>
-											<li>Resistance-based connectivity modelling using cost distance and current flow.</li>
-											<li>Assessed the degree to which the presence of corridor influences connectivity and small mammal
+										<td>
+											<b>Graduate Thesis Research</b> (UNT) <br>
+											<i>Conservation, Connectivity, and Coexistence:
+												Understanding Corridor Efficacy in Fragmented Landscapes</i><br>
+											<ul>
+												<li>Conducted advanced spatial analyses to quantify landscape connectivity
+													across three study areas in Czechia, Idaho, and Kansas and assess corridor efficacy.</li>
+												<li>Developed scripts for spatial and statistical analyses and uniform data visualization.</li>
+												<li>Used remotely sensed data to quantify and assess the composition of configuration landscapes.</li>
+												<li>Applied best and personally developed geospatial tools and methods to address critical knowledge
+													gaps in corridor ecology and understand the conservation value of corridors.</li>
+											</ul>
+											<ul>
+												<li>Quantified landscape connectivity using resistance-based connectivity models:
+													cost distance (ArcGIS) and current flow (<i>Circuitscape</i>.
+												<li>Assessed the degree to which the presence of corridor influences connectivity and small mammal
 												distribution when compared to isolated patches and intact reference areas composed of contigous
-												forest or rangeland habitat.</li>
-											<li>Applied existing and personally developed geospatial tools and methods to address critical knowledge
-												gaps in corridor ecology and understand the conservation value of corridors.</li></ul>
+												forest or rangeland habitats.</li>
+										</td>
+										</td>
+										<td style="text-align: center; vertical-align: middle;">August 2022<br> - <br>December 2022</td>
+									</tr>
+									<td>
+										<b>Geospatial & Acoustic Ecology and Genetics Research & Applied Spatial Ecology Lab</b> (UNT)<br>
+										<i>Tiger (<i>Panthera tigris</i>) endangerment: Positive responses to tiger conservation efforts</i>
+										<ul>
+											<li>Produced a publishable unit (in progress) from an assignment in a graduate Conservation Biology course.</li>
+											<li>Assessed the influence varying levels of disturbance has on viability of 3 tiger populations.</li>
+											<li>Debugged scripts for statistical analyses; shared with colleagues during the course.</li>
+											<li>Collected demographic data; managed a non-spatial database in a collaborative workspace environment.</li>
+											<li>Conducted population viability analysis; developed life stage diagrams; Leslie matrix projection models.</li>
+										</ul>
 									</td>
-									<td style="text-align: center; vertical-align: middle;">August 2022<br> - <br>December 2022</td>
-								</tr>
-									<tr>
-										<td><b>Geospatial & Acoustic Ecology and Genetics Research & Applied Spatial Ecology Lab</b> (UNT)<br>
-											<i>Tiger (<i>Panthera tigris</i>) endangerment: Positive responses to tiger conservation efforts</i>
-											<ul><li>Produced a publishable unit (in progress) from an assignment in a graduate Conservation Biology course.</li>
-												<li>Assessed the influence varying levels of disturbance has on viability of 3 tiger populations.</li>
-												<li>Debugged scripts for statistical analyses; shared with colleagues during the course.</li>
-												<li>Collected demographic data; managed a non-spatial database in a collaborative workspace environment.</li>
-												<li>Conducted population viability analysis; developed life stage diagrams; Leslie matrix projection models.</li>
-											</ul></td>
-										<td style="text-align: center; vertical-align: middle;">September 2021<br> - <br>December 2021</td>
+									<td style="text-align: center; vertical-align: middle;">September 2021<br> - <br>December 2021</td>
 									</tr>
 									<tr>
 										<td>
 											<i>A Pythonic tool to locate high-priority conservation areas through mining BBS: Sage-grouse as an umbrella species</i><br>
-											<ul><li>Optimized >2,400 data points; developed scripts for statistical analyses and uniform data visualization.</li>
+											<ul>
+												<li>Optimized >2,400 data points; developed scripts for statistical analyses and uniform data visualization.</li>
 												<li>Helped land managers and conservationists better plan to protect Greater-sage grouse as an umbrella
 													species and manage healthy rangeland habitat to protect avian biodiversity long-term.</li>
 												<li> Managed a non-spatial database in a collaborative workspace environment.</li>
@@ -312,12 +320,14 @@
 										<td style="text-align: center; vertical-align: middle;">September 2021<br> - <br>December 2021</td>
 									</tr>
 									<tr>
-										<td><b>Undergraduate Research</b> (CMU) <br>
+										<td>
+											<b>Undergraduate Research</b> (CMU) <br>
 											<i>The steppingstones of dispersal in Felidae</i><br>
-											<ul><li>Assessed the degree to which fragmentation isolated 9 big cat populations with a focus on species
-												dispersal mechanisms and steppingstones.</li>
+											<ul>
 												<li>Manipulated open-sourced GIS data; conducted spatial analyses across geographic ranges using
 													resistance-based connectivity modelling.</li>
+												<li>Assessed the degree to which fragmentation isolated 9 big cat populations with a focus on species
+												dispersal mechanisms and steppingstones.</li>
 												<li>Managed spatial and non-spatial databases of species-specific behavior and morphology.</li>
 												<li>Used home range estimates as a proxy for dispersal distances due to insufficient data in literature.</li>
 											</ul></td>
@@ -347,83 +357,99 @@
 						</section>
 
 						<!-- RESEARCH EXPERIENCE -->
-								<section>
-									<h6>Field Experience</h6>
-									<div class="table-wrapper">
-										<table>
-											<col style="width:85%">
-											<col style="width:15%">
-											<thead>
-												<tr>
-												</tr>
-											</thead>
-												<tr>
-													<td><b>National Science Foundation – International Research Experience for Students</b> (UNT) <br>
-														<i>Sub-Antarctic Biocultural Conservation • Cape Horn Biosphere Reserve, Chile</i><br>
-														<ul>
-															<li>Quantified carbon storage in the southernmost forests of the world using
-																field data collection (Timber cruise), spatial modelling, and statistical analysis.</li>
-															<li>Quantified timber biomass to estimate hours of fuel burning on the
-															ground and carbon storage.</li>
-															<li>Investigated the prevalence of Malaria parasites in avian, mosquito, and
-															black fly populations.</li>
-															<li>Detected Malaria using DNA extraction of blood samples and PCR amplification;
-																identified malaria parasites in blood smears using microscopy.</li>
-															<li>Mist netting, live handling of avians, blood sampling.</li>
-														<li>Trained graduate students in small mammal trapping with Sherman traps and scouting
-														the landscape for trapping.</li>
-														<li>Awarded a competitive fellowship to cover all travel for a 3.5 week research trip.</li>
-															<li>Conducted theoretical and field research to address social and ecological dimensions of  environmental issues to conserve biological and cultural
-																diversity. Integrated scientific research, policy development, environmental philosophy, and the arts. </li>
-													</ul></td>
-													<td style="text-align: center; vertical-align: middle;">December 2022<br> - <br>January 2023</td>
-												</tr>
-												<tr>
-													<td><b>Global Corridor Efficacy Assessment</b> • <i><b><a href="https://www.docorridorswork.com/project-personnel-1">Do Corridors Work?</a></i></b> (UNT)<br>
-														 <i>Managua, Nicaragua</i><br>
-														<ul><li>Established and maintained working relationships with partners in academia and local communities.</li>
-														<li>Supported community-led conservation efforts; learned local decision-making processes and needs.</li>
-															<li>Assisted with training local collaborators in field protocols | Small mammal trapping & covariate data.</li>
-															<li>GPS, Sherman/Tomahawk transects, live handing and small mammal identification, tissue sample and
-																morphometric data collection, acoustic monitoring, Timber Cruise, data entry.</li>
-															<li>Mist netting, live handling and bat identification, morphometric data collection.</li>
-															<li>Scouted landscape to identify forest patches suitable for field sampling/spatial modelling.</li>
-														<li>Met with local landowners with collaborators to discuss field sampling on private land.</li></ul></td>
-											<td style="text-align: center; vertical-align: middle;">August 2022</td>
-												</tr>
-											<tr>
-												<td>
-														 <i> Kakamega, Kenya</i><br>
-														<ul><li>Met with the director of a national government agency with collaborators to discuss permit acquisition
-															and contracts for field sampling.</li>
-														<li>Established and maintained working relationships with partners in private sectors and local communities.</li>
-															<li>Supported community-led conservation efforts; learned local decision-making processes and needs.</li>
-															<li>Assisted with training local collaborators in field data collection and protocols.</li>
-															<li>GPS, acoustic monitoring, camera trapping, Timber Cruise.</li></ul>
-													</td>
-													<td style="text-align: center; vertical-align: middle;">May 2022</td>
-											</tr>
-											<tr>
-												<td>
-														 <i>Tarquinia, Italy</i><br>
-														<ul><li>Established and maintained working relationships with partners in academia and private sectors.</li>
-														<li>Utilized mobile genetics lab to extract DNA from fecal and tissue samples.</li>
-															<li>Conducted field sampling with local collaborators | Small mammal trapping & covariate data.</li>
-															<li>GPS, Sherman transects, live handling and small mammal/bird identification, tissue sample and
-																morphometric data collection, scat surveys, acoustic monitoring, Timber Cruise.</li>
-															<li>Scouted landscape to identify forest patches suitable for field sampling/spatial modelling.</li></ul>
-													</td>
-													<td style="text-align: center; vertical-align: middle;">March 2022</td>
-											</tr>
-											<tr>
-												<td>
-														 <i>Kansas, United States</i><br>
-													<ul><li>Established and maintained a working relationship with local field technician. </li>
-															<li>Conducted field sampling with local collaborators | Small mammal trapping & covariate data.</li>
-														<li>GPS, Sherman transects, live handing and small mammal identification, tissue sample and
-															morphometric data collection, Timber Cruise, data entry.</li>
-														<li>Surveyed a Greater Prairie-chicken lek to assess courtship displays/breeding behaviors.</ul>
+						<section>
+							<h6>Field Experience</h6>
+							<div class="table-wrapper">
+								<table>
+									<col style="width:85%">
+									<col style="width:15%">
+									<thead>
+									<tr>
+									</tr>
+									</thead>
+									<tr>
+										<td><b>National Science Foundation – International Research Experience for Students</b> (UNT) <br>
+											<i>Sub-Antarctic Biocultural Conservation • Cape Horn Biosphere Reserve, Chile</i><br>
+											<ul>
+												<li>Quantified carbon storage in the southernmost forests of the world using
+													field data collection (Timber cruise), spatial modelling, and statistical analysis.</li>
+												<li>Quantified timber biomass to estimate hours of fuel burning on the
+													ground and carbon storage.</li>
+												<li>Mist netted, live handled and identified avians, collected morphometric data and
+													blood samples.</li>
+												<li>Collected GPS data, set Sherman transects, assessed forests using Timber Cruise.</li>
+												<li>Trained graduate students in small mammal trapping with Sherman traps and scouting
+													the landscape for trapping.</li>
+												<li>Investigated the prevalence of Malaria parasites in avian, mosquito, and
+													black fly populations.</li>
+												<li>Detected Malaria using DNA extraction of blood samples and PCR amplification;
+													identified malaria parasites in blood smears using microscopy.</li>
+												<li>Awarded a competitive fellowship to cover all travel for a 3.5 week research trip.</li>
+												<li>Conducted theoretical and field research to address social and ecological dimensions of  environmental issues to conserve biological and cultural
+													diversity. Integrated scientific research, policy development, environmental philosophy, and the arts. </li>
+											</ul>
+										</td>
+										<td style="text-align: center; vertical-align: middle;">December 2022<br> - <br>January 2023</td>
+									</tr>
+									<tr>
+										<td><b>Global Corridor Efficacy Assessment</b> • <i><b><a href="https://www.docorridorswork.com/project-personnel-1">Do Corridors Work?</a></i></b> (UNT)<br>
+											<i>Managua, Nicaragua</i><br>
+											<ul>
+												<li>Scouted landscape to identify forest patches suitable for field sampling/spatial modelling.</li>
+												<li>Assisted with training local collaborators in field data collection and protocols.</li>
+												<li>Mist netted, live handled and identified bats, collected morphometric data.</li>
+												<li>Collected GPS data, set Sherman transects, live handled and identified small mammals,
+													collected tissue samples and morphometric data, assessed forests using Timber Cruise,
+													set acoustic monitors.</li>
+												<li>Established and maintained working relationships with partners in academia and local communities.</li>
+												<li>Supported community-led conservation efforts; learned local decision-making processes and needs.</li>
+												<li>Met with local landowners with collaborators to discuss field sampling on private land.</li>
+											</ul>
+										</td>
+										<td style="text-align: center; vertical-align: middle;">August 2022</td>
+									</tr>
+									<tr>
+										<td>
+											<i> Kakamega, Kenya</i><br>
+											<ul>
+												<li>Met with the director of a national government agency with collaborators to discuss permit acquisition
+													and contracts for field sampling.</li>
+												<li>Supported community-led conservation efforts; learned local decision-making processes and needs.</li>
+												<li>Assisted with training local collaborators in field data collection and protocols.</li>
+												<li>Collected GPS data, assessed forests using Timber Cruise, set acoustic monitors and camera traps.</li>
+												<li>Established and maintained working relationships with partners in private sectors and local communities.</li>
+											</ul>
+										</td>
+										<td style="text-align: center; vertical-align: middle;">May 2022</td>
+									</tr>
+									<tr>
+										<td>
+											<i>Tarquinia, Italy</i><br>
+											<ul>
+												<li>Scouted landscape to identify forest patches suitable for field sampling/spatial modelling.</li>
+												<li>Utilized mobile genetics lab to extract DNA from fecal and tissue samples.</li>
+												<li>Conducted field sampling with local collaborator to trap small mammals and collect covariate data.</li>
+												<li>Collected GPS data, set Sherman transects, live handled and identified small mammals/avians,
+													collected tissue samples and morphometric data, assessed forests using Timber Cruise,
+													conducted walking scat survey, collected scat, set acoustic monitors.</li>
+												<li>Established and maintained working relationships with partners in academia and private sectors.</li>
+											</ul>
+										</td>
+										<td style="text-align: center; vertical-align: middle;">March 2022</td>
+									</tr>
+									<tr>
+										<td>
+											<i>Kansas, United States</i><br>
+											<ul>
+												<li>Surveyed a Greater Prairie-chicken lek to assess courtship displays and breeding behaviors.</li>
+												<li>Scouted landscape to identify forest patches suitable for field sampling/spatial modelling.</li>
+												<li>Conducted field sampling with local collaborator to trap small mammals and collect covariate data.</li>
+												<li>Collected GPS data, set Sherman transects, live handled and identified small mammals,
+													collected tissue samples and morphometric data, assessed forests using Timber Cruise, and
+													entered data in database.</li>
+												<li>Established and maintained a working relationship with local field technician. </li>
 
+											</ul>
 												</td>
 													<td style="text-align: center; vertical-align: middle;">April 2022</td>
 											</tr>
@@ -461,7 +487,8 @@
 											<tbody>
 													<td>
 														<p class="hangingindent">Baxter-Slye J with Contributions from <b>Long AM</b>, Kalta B (2022).
-															Field & laboratory methods for environmental science for non-majors (2nd edition).
+															<a target="_blank" rel="noopener noreferrer" href="https://he.kendallhunt.com/sites/default/files/product_images_original/9798765708002.jpg">
+															Field & laboratory methods for environmental science for non-majors (2nd edition)</a>.
 															Department of Biological Sciences at University of North Texas. Kendall Hunt Publishing.</p>
 														</td>
 											</tfoot>
@@ -485,7 +512,7 @@
 													<td>
 														<b>MMC Third Annual Student Showcase</b> (MMC)<br>
 														<p class="hangingindent"><b>Long AM</b>, Lombard A, Johnson L, Wagner J. Mice DNA barcoding.</p>
-															<p class="indent">*Received Student Showcase Award></p>
+															<p class="indent">*Received Student Showcase Award</p>
 														</td>
 													<td style="text-align: center; vertical-align: middle;">April 2018</td>
 												</tr>
