--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<li><a href="mailto:along3460@gmail.com" class="icon style1 fa-envelope"><span class="label">Email</span></a></li>
 							<li><a href="https://amandamlong.github.io/" class="icon brands style1 fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
-						<center><p>This CV is interactive - Check out the links as well as my GIS portfolio for more details :)</p></center><br>
+						<center><p>This CV is interactive - Check out the links as well as my GIS portfolio for more details</p></center><br>
 				</section>
 
 
