--- a/index.html
+++ b/index.html
@@ -372,9 +372,12 @@
 											<i>Sub-Antarctic Biocultural Conservation • Cape Horn Biosphere Reserve, Chile</i><br>
 											<ul>
 												<li>Quantified carbon storage in the southernmost forests of the world using
-													field data collection (Timber cruise), spatial modelling, and statistical analysis.</li>
-												<li>Quantified timber biomass to estimate hours of fuel burning on the
-													ground and carbon storage.</li>
+													field data collection, spatial modelling, and statistical analysis; quantified
+												timber biomass to estimate hours of fuel burning on the ground.</li>
+												<li>Created an <a target="_blank" rel="noopener noreferrer" href="https://storymaps.arcgis.com/stories/4e4df2a903624f4c83cda7a6c68c3893">
+													ArcGIS StoryMap, <i>Sub-Antarctic Biocultural Conservation</i></a>, to emphasize the interdisciplinary approach
+													linking social and ecological systems.</li>
+
 												<li>Mist netted, live handled and identified avians, collected morphometric data and
 													blood samples.</li>
 												<li>Collected GPS data, set Sherman transects, assessed forests using Timber Cruise.</li>
@@ -385,8 +388,10 @@
 												<li>Detected Malaria using DNA extraction of blood samples and PCR amplification;
 													identified malaria parasites in blood smears using microscopy.</li>
 												<li>Awarded a competitive fellowship to cover all travel for a 3.5 week research trip.</li>
-												<li>Conducted theoretical and field research to address social and ecological dimensions of  environmental issues to conserve biological and cultural
-													diversity. Integrated scientific research, policy development, environmental philosophy, and the arts. </li>
+												<li>Addressed complex biocultural conservation issues in one of the world's most pristine ecosystems
+													with a focus on: climate change, disease ecology, avian hosts and insect vectors,
+													habitat structure, threats to biodiversity conservation, socio-cultural perspectives on biodiversity,
+													biocultural diversity, ecological processes, and biodiversity assessments.</li>
 											</ul>
 										</td>
 										<td style="text-align: center; vertical-align: middle;">December 2022<br> - <br>January 2023</td>
