--- a/EIA.html
+++ b/EIA.html
@@ -1,8 +1,7 @@
-<!-- EIA PORTFOLIO -->
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>EIA</title>
+		<title>EIA Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/EIA.css" />
@@ -41,10 +40,12 @@
 									<embed src="docs\EIA Course Portfolio - AML.pdf#toolbar=0" type="application/pdf"
 										   height="625px" width="500px">
 								</span>
-								<p><center>The BIOL 5100 Environmental Impact Assessment (EIA) course portfolio is a compilation of
-								assignments showing competency and measures of mastery of ten primary EIA
-								subjects covering the principles and practices of preparing environmental
-								impact statements and assessments.</center></p>
+								<p><center>In an <i>Environmental Impact Assessment</i> (EIA) course,
+								I created a portfolio compiled of assignments showing competency
+								and measures of mastery of ten primary EIA subjects covering the
+								principles and practices of preparing environmental
+								impact statements and assessments.</center>
+								</p>
 								<dl>
 									<dt>Competency Assignments</dt>
 									<dd>
