--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
 							<tr>
 								<td style="text-align: center; vertical-align: middle;">
 									Geospatial Analysis<br>
-									Remote Sensing<br>
+									Imagery Analysis<br>
 									Programming Languages
 								</td>
 								<td style="text-align: center; vertical-align: middle;">
 									Data Management<br>
-									Data Analysis & Visualization <br>
+									Microsoft Office Suite<br>
 									<a target="_blank" rel="noopener noreferrer" href="EIA.html">Environmental Impact Assessments</a>
 								</td>
 								<td style="text-align: center; vertical-align: middle;">
@@ -82,24 +82,25 @@
 							</tfoot>
 						</table>
 						<dl>
-							<dt>Technical</dt>
+							<dt>Technical Skills</dt>
 							<dd>
-								<p>ESRI ArcGIS, Remote Sensing, Spatial and Non-spatial
-									Data Management, Python, SQL, R, Digitizing, Data
-									Manipulation and Analysis, Troubleshooting, Data Visualization,
-									Microsoft Office Suite, HTML, CSS, JavaScript, Google Earth</p>
+								<p>ArcGIS, Spatial Analysis, Remote Sensing, Spatial and Non-spatial
+									Data Management, Cartography, Model Builder, Data Manipulation and Analysis, Data Visualization, Digitizing,
+									Python, SQL, R, HTML, CSS, JavaScript, SCSS, Troubleshooting,
+									Excel, PowerPoint, Word, Access, Google Earth</p>
 							</dd>
-							<dt>Field</dt>
+							<dt>Field Skills</dt>
 							<dd>
 								<p>GPS Data Collection, Timber Cruise,
 									Small Mammal Trapping and Handling, Mist Netting, Bird Handling,
 									Radio Telemetry, Acoustic Monitoring, Camera Trapping,
-									Remote Fieldwork, Geospatial Implementation</p>
+									Remote Fieldwork, Integration with GIS</p>
 							</dd>
-							<dt>Soft</dt>
+							<dt>Soft Skills</dt>
 							<dd>
-								<p>Adaptability, Detail Oriented, Collaborative, Communicative,
-									Creative, Troubleshooting, Presentation Development, Time Management</p><br>
+								<p>Adaptable, Attention to Detail, Collaboration, Communication,
+									Creative,Presentation Development, Project Management,
+									Troubleshooting, Time Management</p><br>
 							</dd>
 						</dl>
 
@@ -175,28 +176,34 @@
 									</tr>
 									</thead>
 									<tr>
-									<tr>
-									<td><b>Research Assistant</b> (UNT) <br>
+									<td>
+										<b>Research Assistant</b> (UNT)<br>
 										<i>Global Corridor Efficacy Project</i> • <i><a target="_blank" rel="noopener noreferrer" href="https://www.docorridorswork.com/project-personnel-1">Do Corridors Work?</a></i><br>
 										<ul>
-											<li>Collected, created, and analyzed geospatial data; managed >2 of TB spatial (vector and raster)
-												and non-spatial databases; maintained record of methods and troubleshooting.</li>
-											<li>Designed an algorithm for project collaborators to implement spatial analysis,
-												data conversion, and data management 16+ landscapes, internationally.</li>
-											<li>Implemented traditional knowledge and country-specific policies with spatial and field data collection to
-												to support long-term collaborative conservation goals.</li>
-											<li>Supported community-led conservation efforts;
-												learned local decision-making processes and needs.</li>
-											<li>Developed and cultivated strong rapports with local collaborators in
-												Nicaragua, Kenya, Italy.</li>
-											<li>Maintained responsibility for administrating geospatial lab computers
-												to facilitate program use; trained colleagues on GIS procedures and
-												geodatabase management.</li>
-											<li>Assisted with the implementation of field sampling and training collaborators in
-												field protocols; transported field equipment to and from new sites, internationally.
+											<li>Collected, created, manipulated, analyzed, and managed >2 TB of spatial data to support an international research collaboration.</li>
+											<li>Organized and prepared presentations to update project team; implemented feedback to meet multi-user objectives.</li>
+											<li>Designed a workflow for project collaborators to implement spatial processing across 11+ landscapes, internationally.</li>
+											<li>Maintained responsibility for administrating geospatial lab computers to facilitate program use.</li>
+											<li>Actively trained colleagues on conducting advanced spatial analyses and geodatabase management.</li>
+											<li>Worked closely with the project manager, field technicians, and partners in private sectors and academia.</li>
 										</ul>
+										<ol>
+											<li>Developed and cultivated strong rapports with collaborators in Italy, Kenya, and Nicaragua.</li>
+										</ol>
+										<ul>
+											<li>Implemented country-specific policies with field and spatial data to support long-term collaborative conservation goals.</li>
+										</ul>
+										<ol>
+											<li>Supported community-led conservation efforts; learned local decision-making processes and needs.</li>
+										</ol>
+										<ul>
+											<li>Assisted with the international transportation of field and lab equipment, implementation of field sampling, and training collaborators in field protocols.</li>
+										</ul>
+										<ol>
+											<li>Scouted landscapes to identify areas suitable for field data collection and spatial modelling as per project requirements.</li>
+										</ol>
 									</td>
-									<td style="text-align: center; vertical-align: middle;">May 2022<br> - <br>August 2022</td>
+								<td style="text-align: center; vertical-align: middle;">May 2022<br> - <br>August 2022</td>
 								</tr>
 									<tr>
 										<td><ul>
