--- a/index.html
+++ b/index.html
@@ -206,14 +206,17 @@
 								<td style="text-align: center; vertical-align: middle;">May 2022<br> - <br>August 2022</td>
 								</tr>
 									<tr>
-										<td><ul>
-											<li>Optimized >4,500 GPS points; integrated with landscape-scale spatial analyses.</li>
-											<li>Used remotely sensed data to digitize landscape elements, classify land covers, and
-												assess forest and rangeland quality.</li>
-											<li>Assessed current GIS technologies; applied best and developed new geospatial processes
-												for conservation objectives; maintained record of methods and troubleshooting
-												for collaborators to implement spatial modelling approaches.</li>
-										</ul></td>
+										<td>
+											<ul>
+												<li>Optimized >4,500 GPS points; integrated with landscape-scale spatial analyses.</li>
+												<li>Analyzed imagery and digitized landscape elements using biologically relevant remotely sensed data.</li>
+												<li>Assessed current GIS technologies; applied best and developed new geospatial processes
+												for conservation objectives.
+											</ul>
+											<ol>
+												<li>Thoroughly maintained record of methodological approaches and troubleshooting.</li>
+											</ol>
+										</td>
 										<td style="text-align: center; vertical-align: middle;">July 2021<br> - <br>August 2021</td>
 									</tr>
 									<tr>
