--- a/index.html
+++ b/index.html
@@ -224,9 +224,16 @@
 											<i>BIOL 1132 Environmental Science for Non-majors</i><br>
 											<ul>
 												<li>Promoted to lead TA in January 2022; aided in assessment and
-													recommendations to achieve course efficacy.</li>
+													recommendations to achieve course efficacy; trained new TAs weekly to aid in their development and teaching successes;
+													prepared weekly PowerPoints, learning materials, and organized the online course for all TAs to use.</li>
 												<li>Achieved proficiency in effectively communicating technical content to non-technical audiences.</li>
-												<li>Supervised environmental sampling methods in a lab setting for 5-course sections with ~24 students.</li>
+												<li>Maintained responsibility for revising 10 modules to publish the
+													2nd edition course lab manual,
+												<a target="_blank" rel="noopener noreferrer" href="https://he.kendallhunt.com/sites/default/files/product_images_original/9798765708002.jpg">
+													<i>Field & Laboratory Methods for Environmental Science for Non-majors</i></a>.</li>
+												<li>Supervised environmental sampling methods in a lab/field setting for 11 course sections with ~24 students.</li>
+											</ul>
+											<ol>
 												<li>Measured dissolved oxygen content, contaminant levels,
 													and pH to analyze and compare municipal and pond water quality.</li>
 												<li>Measured nutrient levels, pH, soil structure/texture to analyze and compare soil health from
@@ -236,34 +243,14 @@
 													of benthic macroinvertebrates.</li>
 												<li>Assessed the influence varying levels of fertilizer and temperature has on dissolved oxygen content.</li>
 												<li>Assessed changes in the global climate over time (i.e., carbon dioxide levels, sea levels, global temperatures.</li>
-												<li>Trained new TAs weekly to aid in their development and teaching successes.</li>
-												<li>Maintained responsibility for revising 10 modules to publish the
-													2nd edition course lab manual,
-												<a target="_blank" rel="noopener noreferrer" href="https://he.kendallhunt.com/sites/default/files/product_images_original/9798765708002.jpg">
-													<i>Field & Laboratory Methods for Environmental Science for Non-majors</i></a>.</li>
-												<li>Held weekly office hours and promptly updated grades.</li>
-												<li>Prepared weekly PowerPoints and learning materials; organized the online course for all TAs to use.</li>
+											</ol>
+											<ul>
+											<li>Held weekly office hours and promptly updated grades.</li>
+												<li>Maintained responsibility for weekly lab exercise prep following lab protocol for all TA sections;
+													revised weekly quizzes and exams..</li>
 											</ul>
 										</td>
-										<td style="text-align: center; vertical-align: middle;">January 2022<br> - <br>December 2022</td>
-									</tr>
-									<tr>
-										<td><ul>
-											<li>Supervised environmental sampling methods in a lab setting for 6-course sections with ~24
-												students; held weekly office hours and promptly updated grades. </li>
-											<li>Measured dissolved oxygen content, contaminant levels,
-												and pH to analyze and compare municipal and pond water quality.</li>
-											<li>Measured nutrient levels, pH, soil structure/texture to analyze and compare soil health from
-												samples obtained from different land use types (e.g., restored prairie, farming, residential).</li>
-											<li>Planted native plants/seeds on 4 acres of a restored native tallgrass prairie.</li>
-											<li>Assessed aquatic habitat quality in local streams using biomonitors; collected/identified species
-												of benthic macroinvertebrates.</li>
-											<li>Assessed the influence varying levels of fertilizer and temperature has on dissolved oxygen content.</li>
-											<li>Assessed changes in the global climate over time (i.e., carbon dioxide levels, sea levels, global temperatures.</li>
-											<li>Maintained responsibility for weekly lab exercise prep following lab protocol for all TA sections.</li>
-											<li>Prepared weekly PowerPoint lectures and learning materials; revised weekly quizzes and exams.
-										</ul><td style="text-align: center; vertical-align: middle;">January 2021<br> - <br>December 2021</td>
-										</td>
+										<td style="text-align: center; vertical-align: middle;">January 2021<br> - <br>December 2023</td>
 									</tr>
 									</tfoot>
 								</table>
