--- a/index.html
+++ b/index.html
@@ -224,13 +224,17 @@
 											<i>BIOL 1132 Environmental Science for Non-majors</i><br>
 											<ul>
 												<li>Promoted to lead TA in January 2022; aided in assessment and
-													recommendations to achieve course efficacy; trained new TAs weekly to aid in their development and teaching successes;
-													prepared weekly PowerPoints, learning materials, and organized the online course for all TAs to use.</li>
+													recommendations to achieve course efficacy.
 												<li>Achieved proficiency in effectively communicating technical content to non-technical audiences.</li>
-												<li>Maintained responsibility for revising 10 modules to publish the
-													2nd edition course lab manual,
+											</ul>
+											<ol>
+												<li>Actively trained new TAs weekly to aid in their development and teaching successes.</li>
+												<li>Reliably prepared weekly lecture presentations, learning materials, and organized the online course for all TAs to use; revised weekly quizzes and exams.</li>
+												<li>Thoroughly revised 10 lab exercises to publish the 2nd edition course lab manual,
 												<a target="_blank" rel="noopener noreferrer" href="https://he.kendallhunt.com/sites/default/files/product_images_original/9798765708002.jpg">
 													<i>Field & Laboratory Methods for Environmental Science for Non-majors</i></a>.</li>
+											</ol>
+											<ul>
 												<li>Supervised environmental sampling methods in a lab/field setting for 11 course sections with ~24 students.</li>
 											</ul>
 											<ol>
@@ -245,9 +249,9 @@
 												<li>Assessed changes in the global climate over time (i.e., carbon dioxide levels, sea levels, global temperatures.</li>
 											</ol>
 											<ul>
-											<li>Held weekly office hours and promptly updated grades.</li>
+											<li>Promptly updated grades weekly and held weekly office hours.</li>
 												<li>Maintained responsibility for weekly lab exercise prep following lab protocol for all TA sections;
-													revised weekly quizzes and exams..</li>
+													revised weekly quizzes and exams.</li>
 											</ul>
 										</td>
 										<td style="text-align: center; vertical-align: middle;">January 2021<br> - <br>December 2023</td>
