--- a/index.html
+++ b/index.html
@@ -238,15 +238,18 @@
 												<li>Supervised environmental sampling methods in a lab/field setting for 11 course sections with ~24 students.</li>
 											</ul>
 											<ol>
-												<li>Measured dissolved oxygen content, contaminant levels,
-													and pH to analyze and compare municipal and pond water quality.</li>
-												<li>Measured nutrient levels, pH, soil structure/texture to analyze and compare soil health from
-													samples obtained from different land use types (e.g., restored prairie, farming, residential).</li>
-												<li>Planted native plants/seeds on 4 acres of a restored native tallgrass prairie.</li>
-												<li>Assessed aquatic habitat quality in local streams using biomonitors; collected/identified species
-													of benthic macroinvertebrates.</li>
-												<li>Assessed the influence varying levels of fertilizer and temperature has on dissolved oxygen content.</li>
-												<li>Assessed changes in the global climate over time (i.e., carbon dioxide levels, sea levels, global temperatures.</li>
+												<li>Tested water quality to compare dissolved oxygen content, contaminant levels,
+													and pH between municipal and pond water samples.</li>
+												<li>Planted native plants and seeds across 4 acres of a restored native tallgrass prairie to
+													promote pollinator habitats, outdoor recreation, and land restoration.</li>
+												<li>Tested soil samples to compare nutrient levels, pH, soil structure/texture to compare
+												soil health between agricultural and native prairie samples; promoted native plants, pollinator habitats,
+													sustainable agriculture, and land restoration.</li>
+												<li>Measured dissolved oxygen content in freshwater samples with varying levels of fertilizer and
+												temperature to promote sustainable agriculture.</li>
+												<li>Identified/collected benthic macroinvertebrates and used biomonitors to assess freshwater health in local streams.</li>
+												<li>Assessed changes in the global climate over time (e.g., carbon dioxide levels, sea levels, global temperatures)
+													to address critical environmental issues on a global scale.</li>
 											</ol>
 											<ul>
 											<li>Promptly updated grades weekly and held weekly office hours.</li>
