--- a/index.html
+++ b/index.html
@@ -375,28 +375,37 @@
 										<td><b>National Science Foundation – International Research Experience for Students</b> (UNT) <br>
 											<i>Sub-Antarctic Biocultural Conservation • Cape Horn Biosphere Reserve, Chile</i><br>
 											<ul>
-												<li>Quantified carbon storage in the southernmost forests of the world using
-													field data collection, spatial modelling, and statistical analysis; quantified
-												timber biomass to estimate hours of fuel burning on the ground.</li>
+												<li>Inventoried the southernmost forests of the world to estimate tree biomass and quantify carbon storage using field data collection,
+													spatial modelling, and statistical analysis; estimated hours of fuel burning on the ground to determine fire hazards.</li>
+											</ul>
+											<ol>
+												<li>Collected GPS and open-sourced spatial data; measured tree DBH, height, and percent cover; identified tree species.</li>
+												<li>Integrated field data with spatial data for statistical analyses; interpreted results.</li>
+											</ol>
+											<ul>
+												<li>Investigated the influence forest composition and configuration has on the prevalence of avian
+											Malaria as part of long-term research of complex socio-ecological issues in the content of global climate change.</li>
+											</ul>
+											<ol>
+												<li>Collected GPA data, mist netted, live handled and identified avians, collected avian morphometric data and
+													blood samples; detected Malaria using DNA extraction of blood samples and PCR amplification; optimized PCR primers.</li>
+												<li>Set black fly and mosquito traps to collect bug samples; identified Malaria parasites in blood smears
+												using microscopy.</li>
+											</ol>
+											<ul>
 												<li>Created an <a target="_blank" rel="noopener noreferrer" href="https://storymaps.arcgis.com/stories/4e4df2a903624f4c83cda7a6c68c3893">
 													ArcGIS StoryMap, <i>Sub-Antarctic Biocultural Conservation</i></a>, to emphasize the interdisciplinary approach
 													linking social and ecological systems.</li>
-
-												<li>Mist netted, live handled and identified avians, collected morphometric data and
-													blood samples.</li>
-												<li>Collected GPS data, set Sherman transects, assessed forests using Timber Cruise.</li>
-												<li>Trained graduate students in small mammal trapping with Sherman traps and scouting
-													the landscape for trapping.</li>
-												<li>Investigated the prevalence of Malaria parasites in avian, mosquito, and
-													black fly populations.</li>
-												<li>Detected Malaria using DNA extraction of blood samples and PCR amplification;
-													identified malaria parasites in blood smears using microscopy.</li>
+												<li>Trained research team in small mammal trapping protocols using Sherman traps and scouting
+													landscapes to identify areas of suitable habitat.</li>
 												<li>Awarded a competitive fellowship to cover all travel for a 3.5 week research trip.</li>
-												<li>Addressed complex biocultural conservation issues in one of the world's most pristine ecosystems
-													with a focus on: climate change, disease ecology, avian hosts and insect vectors,
+												<li>Addressed complex biocultural conservation issues in one of the world's most pristine ecosystems.</li>
+											</ul>
+											<ol>
+												<li>Focused on topics of climate change, disease ecology, avian hosts and insect vectors,
 													habitat structure, threats to biodiversity conservation, socio-cultural perspectives on biodiversity,
 													biocultural diversity, ecological processes, and biodiversity assessments.</li>
-											</ul>
+											</ol>
 										</td>
 										<td style="text-align: center; vertical-align: middle;">December 2022<br> - <br>January 2023</td>
 									</tr>
